--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/architect.css">
 </head>
 <body>
+    <!-- header start -->
     <header>
 <nav>
     <h3 class="header-title">G3 Architects</h3>
@@ -27,8 +28,22 @@
         
 </div>
     </header>
+    <!-- header ends -->
     <main>
+          <section class="team-container">
+            <div class="team-img">
+                   <img src="images/team1.png" alt="">
+                   <img src="images/team2.png" alt="">
+                   <img src="images/team3.png" alt="">
+                   <img src="images/team4.png" alt="">
+            </div>
+            <div class="team-content">
+                <h3 class="team-title"><span class="Quick-list">Quick list</span> <span>of Our</span> <span class="Features">Features</span></h3>
+                <p class="team-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-pri">Explore More</button>
 
+            </div>
+          </section>     
     </main>
     <footer>
 
